--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
                 <p class="hero-subtitle">Community-Driven Quantum Mechanics Learning Platform</p>
                 <!-- Resources CTA (new) -->
                 <div class="cta-buttons">
-                     <a href="https://quantarax-resources.iblogger.org" class="btn" target="_blank" rel="noopener noreferrer">Explore Resources</a>
-                     <!-- Updated Join Button Link -->
-                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScV2PXre2X5sZbm9FHrvCsFDjCJutrOD4cZIh9XULhqzwGO5Q/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="btn join-btn">Join Our Community</a>
+                     <a href="https://quantarax-resources.iblogger.org" class="btn btn--outline" target="_blank" rel="noopener noreferrer">Explore Resources</a>
+                     <a href="/forum" class="btn btn--primary join-btn">
+                        <span class="btn-text">Visit Forum</span>
+                        <div class="btn-glow"></div>
+                     </a>
+                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScV2PXre2X5sZbm9FHrvCsFDjCJutrOD4cZIh9XULhqzwGO5Q/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="btn btn--secondary">Join Membership</a>
                 </div>
             </div>
         </section>
