--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <a href="https://quantarax-resources.iblogger.org" class="btn" target="_blank"
                         rel="noopener noreferrer">Explore Resources</a>
                     <!-- Updated Join Button Link -->
+                    <a href="https://cdn.alimad.co/f/quantarax_charter.pdf" class="btn" target="_blank"
+                        rel="noopener noreferrer">View Charter</a>
+                    <!-- Updated Join Button Link -->
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScV2PXre2X5sZbm9FHrvCsFDjCJutrOD4cZIh9XULhqzwGO5Q/viewform?usp=dialog"
                         target="_blank" rel="noopener noreferrer" class="btn join-btn">Join Our Community</a>
                 </div>
