--- a/credits.html
+++ b/credits.html
@@ -60,6 +60,7 @@
                 <i data-lucide="arrow-left" class="icon-sm"></i> Back to Home
             </a>
 
+            <!-- Founding Team Section -->
             <section id="leadership" class="content-section" style="padding-top: 0;">
                 <div class="section-header">
                     <div class="section-icon">
@@ -93,133 +94,161 @@
                 </div>
             </section>
 
-            <!-- Executive Leadership -->
-            <section class="content-section">
+            <!-- Community & Learning Cell -->
+            <section id="community-learning" class="content-section">
                 <div class="section-header">
                     <div class="section-icon">
-                        <i data-lucide="shield-check" class="icon-lg"></i>
+                        <i data-lucide="users" class="icon-lg"></i>
                     </div>
-                    <h2 class="section-title">Executive Leadership</h2>
+                    <h2 class="section-title">Community & Learning Cell</h2>
                 </div>
                 <div class="section-content">
-                    <div class="leadership-grid">
-                        <div class="leader-card">
-                            <div class="leader-avatar">
-                                <div class="avatar-ring"></div>
-                                <div class="avatar-center">SG</div>
-                            </div>
-                            <h3>Sundus Gul</h3>
-                            <div class="role-badge">Executive Strategy</div>
-                            <p>Leading top-tier strategy and design for learning environments and community growth.</p>
+                    <div class="team-grid">
+                        <div class="team-member">
+                            <h4>Muhammad Ibrahim</h4>
+                            <p class="role">Head Coordinator (Administration), Designer at Learning</p>
                         </div>
-                        <div class="leader-card">
-                            <div class="leader-avatar">
-                                <div class="avatar-ring"></div>
-                                <div class="avatar-center">IK</div>
-                            </div>
-                            <h3>Ibrahim (CosmiC)</h3>
-                            <div class="role-badge">Head Coordinator (Community)</div>
-                            <p>Managing the heart of our community engagement and external affairs.</p>
+                        <div class="team-member">
+                            <h4>Mateusz Gołębiowski</h4>
+                            <p class="role">Moderator</p>
                         </div>
-                        <div class="leader-card">
-                            <div class="leader-avatar">
-                                <div class="avatar-ring"></div>
-                                <div class="avatar-center">MI</div>
-                            </div>
-                            <h3>Muhammad Ibrahim</h3>
-                            <div class="role-badge">Head Coordinator (Admin)</div>
-                            <p>Ensuring smooth operations and organizational excellence across all departments.</p>
+                        <div class="team-member">
+                            <h4>Syed Ali Imran</h4>
+                            <p class="role">Resourcer at Community</p>
                         </div>
-                        <div class="leader-card">
-                            <div class="leader-avatar">
-                                <div class="avatar-ring"></div>
-                                <div class="avatar-center">AZ</div>
-                            </div>
-                            <h3>Ariba Zaheer</h3>
-                            <div class="role-badge">Head Coordinator (Operations)</div>
-                            <p>Overseeing system operations and educational design strategies.</p>
+                        <div class="team-member">
+                            <h4>Ayesha Tariq</h4>
+                            <p class="role">Resourcer at Community</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Ibrahim</h4>
+                            <p class="role">Head Coordinator (Community and Learning), External Affairs Manager</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Muhammad Ibrahim Zahid</h4>
+                            <p class="role">Resourcer at Community, Designer at Learning</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Azka Akram</h4>
+                            <p class="role">Designer at Learning, Resourcer at Learning</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Eman Farooq</h4>
+                            <p class="role">Designer at Learning, Resourcer at Learning</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Mah Noor Asif</h4>
+                            <p class="role">Documentation Manager, Moderator</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Abdul Rehman Tahir</h4>
+                            <p class="role">Programmer, Resourcer at Community</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Uvaim Muhammad</h4>
+                            <p class="role">Designer at Learning, Moderator, Marketing BrainStormer</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>M. Haroon Khan</h4>
+                            <p class="role">Designer at Learning, Documentation Manager</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Zunairah Naeem</h4>
+                            <p class="role">Marketer, Designer at Learning, Moderator</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Ibraheem Rasool</h4>
+                            <p class="role">GD, Resourcer at Community</p>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <!-- Departments -->
-            <div class="departments-grid"
-                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 4rem;">
-                <!-- Community & Learning -->
-                <div class="department-group glass-panel" style="padding: 2rem; border-radius: var(--radius-lg);">
-                    <h3
-                        style="color: var(--color-primary-purple); margin-bottom: 1.5rem; display: flex; align-items: center; gap: 10px;">
-                        <i data-lucide="library"></i> Community & Learning
-                    </h3>
-                    <ul style="list-style: none; padding: 0; color: var(--color-light-text);">
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Syed Ali Imran — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Resourcer</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Mateusz Gołębiowski — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Moderator</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">M. Haroon khan — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Designer</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Abdul Rehman Tahir — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Designer</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Muhammad Ibrahim Zahid — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Designer</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Zunairah Naeem — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Moderator</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Eman Farooq — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Resourcer</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Azka Akram — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Designer</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Ayesha Tariq — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Moderator</span></li>
-                    </ul>
+            <!-- Media & Marketing Cell -->
+            <section id="media-marketing" class="content-section">
+                <div class="section-header">
+                    <div class="section-icon">
+                        <i data-lucide="megaphone" class="icon-lg"></i>
+                    </div>
+                    <h2 class="section-title">Media & Marketing Cell</h2>
                 </div>
+                <div class="section-content">
+                    <div class="team-grid">
+                        <div class="team-member">
+                            <h4>Muhammad Hamdan Ata</h4>
+                            <p class="role">Marketer (Ambassador)</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>AbdulRahman</h4>
+                            <p class="role">VE, GD, Programmer</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Hamza Athar</h4>
+                            <p class="role">Marketing Brainstormer, Marketer, Documentation Manager</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Ammara Sherazi</h4>
+                            <p class="role">GD, Post Writing, Documentation Manager</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Sundus Gul</h4>
+                            <p class="role">VE+GD, Designer of Learning Strategies</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Ali Mohtashim</h4>
+                            <p class="role">Video Editing, Moderator</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Azlan Shahid</h4>
+                            <p class="role">Video Editor, Moderator</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Ariba Zaheer</h4>
+                            <p class="role">Video Editor, Head Coordinator (Operations), Designer at Learning</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-                <!-- Media & Technology -->
-                <div class="department-group glass-panel" style="padding: 2rem; border-radius: var(--radius-lg);">
-                    <h3
-                        style="color: var(--color-primary-purple); margin-bottom: 1.5rem; display: flex; align-items: center; gap: 10px;">
-                        <i data-lucide="code-2"></i> IT Cell
-                    </h3>
-                    <ul style="list-style: none; padding: 0; color: var(--color-light-text);">
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">AbdulRahman (OP) — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Development</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Muhammad Ali — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Website Development</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Ali Mohtashim — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Video Editing</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Ammara Sherazi — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Graphic Design</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Azlan Shahid — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Video Editing</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Hamza Athar — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Marketing</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">M. Hamdan Ata — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Ambassador</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Muzammil rana — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Graphic Design</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Ibraheem Rasool — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Graphic Design</span></li>
-                    </ul>
+            <!-- IT Cell -->
+            <section id="it-cell" class="content-section">
+                <div class="section-header">
+                    <div class="section-icon">
+                        <i data-lucide="code" class="icon-lg"></i>
+                    </div>
+                    <h2 class="section-title">IT Cell</h2>
                 </div>
+                <div class="section-content">
+                    <div class="team-grid">
+                        <div class="team-member">
+                            <h4>Muhammad Ali</h4>
+                            <p class="role">Programmer</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-                <!-- Administration -->
-                <div class="department-group glass-panel" style="padding: 2rem; border-radius: var(--radius-lg);">
-                    <h3
-                        style="color: var(--color-primary-purple); margin-bottom: 1.5rem; display: flex; align-items: center; gap: 10px;">
-                        <i data-lucide="folder-kanban"></i> Administration
-                    </h3>
-                    <ul style="list-style: none; padding: 0; color: var(--color-light-text);">
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">M. Haroon khan — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Documentation</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Ammara Sherazi — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Documentation</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Mah Noor Asif — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Documentation</span></li>
-                        <li style="margin-bottom: 0.8rem; opacity: 0.9;">Muhammad Subhan Khan — <span
-                                style="font-size: 0.8em; opacity: 0.7;">Culture & Ethics</span></li>
-                    </ul>
+            <!-- Other Departments -->
+            <section id="other-depts" class="content-section">
+                <div class="section-header">
+                    <div class="section-icon">
+                        <i data-lucide="briefcase" class="icon-lg"></i>
+                    </div>
+                    <h2 class="section-title">Other Departments</h2>
                 </div>
-            </div>
+                <div class="section-content">
+                    <div class="team-grid">
+                        <div class="team-member">
+                            <h4>Muhammad Subhan Khan</h4>
+                            <p class="role">Culture & Ethics Cell Staff Member</p>
+                        </div>
+                        <div class="team-member">
+                            <h4>Muzammil Rana</h4>
+                            <p class="role">Documentation Manager, Session Holder in Discord, GD</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 
