--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                 <span class="loading-letter">a</span>
                 <span class="loading-letter">X</span>
             </div>
-            <div class="binary-rain"></div>
         </div>
     </div>
     <nav class="navbar">
@@ -70,7 +69,7 @@
                     <span class="binary-icon">03</span>Credits
                 </a>
                 <a href="#join" class="nav-link" data-section="join">
-                    <span class="binary-icon">00</span>Join
+                    <span class="binary-icon">04</span>Join
                 </a>
             </div>
             <button class="mobile-toggle" id="mobileToggle" aria-label="Toggle Menu">
@@ -91,6 +90,7 @@
 
                 <div class="cta-buttons">
                     <a href="/resources" class="btn" target="_blank" rel="noopener noreferrer">Explore Resources</a>
+                    <a href="https://cdn.alimad.co/f/quantarax_charter.pdf" class="btnn" target="_blank" rel="noopener noreferrer">View Charter</a>
 
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScV2PXre2X5sZbm9FHrvCsFDjCJutrOD4cZIh9XULhqzwGO5Q/viewform"
                         target="_blank" rel="noopener noreferrer" class="btn join-btn">Join Our Community</a>
