--- a/resources/index.html
+++ b/resources/index.html
@@ -94,7 +94,7 @@
                                 </span>
                                 <span class="blog-read">
                                     <i data-lucide="clock" class="icon-sm"></i>
-                                    40+ min read
+                                    25 min read
                                 </span>
                             </div>
                             <button class="open-btn"
@@ -132,7 +132,7 @@
                     </div>
                     <div class="blog-content">
                         <span class="blog-category">Quantum Physics</span>
-                        <h2 class="blog-title">Stage 1:Guide to Quantum Physics</h2>
+                        <h2 class="blog-title">Stage 1: Guide to Quantum Physics</h2>
                         <p class="blog-description">This blog is 1<sup>st</sup> stage to start your journey to Quantum
                             physics.</p>
                         <div class="blog-footer">
@@ -143,10 +143,10 @@
                                 </span>
                                 <span class="blog-read">
                                     <i data-lucide="clock" class="icon-sm"></i>
-                                    2 min read
+                                    40+ min read
                                 </span>
                             </div>
-                            <button class="open-btn" onclick="window.location.href='stage-1-roadmap.html'">Open</button>
+                            <button class="open-btn" onclick="window.location.href='blog/stage-1-roadmap.html'">Open</button>
                         </div>
                     </div>
                 </article>
