--- a/credits.html
+++ b/credits.html
@@ -113,11 +113,11 @@
                             <p class="role">Moderator</p>
                         </div>
                         <div class="team-member">
-                            <h4>Syed Ali Imran</h4>
-                            <p class="role">Resourcer at Community</p>
+                            <h4>Ayesha Tariq</h4>
+                            <p class="role">Resourcer at Community, Moderator</p>
                         </div>
                         <div class="team-member">
-                            <h4>Ayesha Tariq</h4>
+                            <h4>Syed Ali Imran</h4>
                             <p class="role">Resourcer at Community</p>
                         </div>
                         <div class="team-member">
